Fix scrollbars

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -109,7 +109,7 @@ button:hover {
 }
 .DetailBody {
     flex: 1;
-    overflow: scroll;
+    overflow-y: auto;
     padding: 0 40px 40px;
 
     img {
